changed header picture

--- a/UpcomingActivities/index.html
+++ b/UpcomingActivities/index.html
@@ -30,7 +30,7 @@
 		</nav>
 	</header> -->
 <nav class="navbar navbar-light navbar-expand-sm bg-warning">
-    <a href=""><img class="logo" src="logo.jpg"></a>
+    <a href=""><img class="logo" src="footer-logo.jpg"></a>
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" href="#">Home Page</a>
