--- a/Become a member/Become a member.html
+++ b/Become a member/Become a member.html
@@ -82,6 +82,16 @@
               <label>Last Name</label>
               <input type="text" class="form-control" id="lname" name = "last" placeholder="last name">
             </div>  
+
+            <div class="form-group">
+              <label>Gender</label>
+              <select class="form-control" id="exampleFormControlSelect1">
+                <option>Gender</option>
+                <option>Male</option>
+                <option>Female</option>
+
+              </select>
+            </div>
               
             <div class="form-group">
               <label>Email address</label>
@@ -90,6 +100,11 @@
 
             <div class="form-group">
               <label for="pwd">Password:</label>
+              <input type="password" class="form-control" id="pwd" name = "password" placeholder="password">
+            </div>
+
+            <div class="form-group">
+              <label for="pwd">Confirm Password:</label>
               <input type="password" class="form-control" id="pwd" name = "password" placeholder="password">
             </div>
 
