--- a/sprint-1/donate.html
+++ b/sprint-1/donate.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="/Users/burtinagraham/Desktop/sprint-1/donate.css" />
+        <title>Document</title>
+        <link rel="stylesheet" type="text/css" href="donate.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         </head>
         <body>  
@@ -20,11 +21,11 @@
                         </div>
                         <div class="collapse navbar-collapse" id="menu-icon">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active"><a class="nav-link" href="">Home</a></li>
-                            <li class="nav-item active"><a class="nav-link" href="">Become A Member</a></li>
-                            <li class="nav-item active"><a class="nav-link" href="">Upcoming Events</a></li>
-                            <li class="nav-item active"><a class="nav-link" href="">Leadership</a></li>
-                            <li class="nav-item active"><a class="nav-link" href="">Donate</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="../Home/Home.html">Home</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="../Become a member/ member.html">Become A Member</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="../leadership/index.html">Leadership</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="/donate.html">Donate</a></li>
                         </ul>
                         </div>
                     </div>
