--- a/Home/Home.html
+++ b/Home/Home.html
@@ -23,7 +23,7 @@
             </div>
             <div class="collapse navbar-collapse" id="menu-icon">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="../Home.html">Home</a></li>
+                <li class="nav-item active"><a class="nav-link" href="/Home.html">Home</a></li>
                 <li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
                 <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
                 <li class="nav-item active"><a class="nav-link" href="../leadership/index.html">Leadership</a></li>
