doing front end changes

--- a/UpcomingActivities/activities.html
+++ b/UpcomingActivities/activities.html
@@ -11,25 +11,25 @@
 
 
 <body>  
-    <!-- <header class="header">
-		<nav class="navbar navbar-expand-sm navbar-light bg-warning">
+    <!-- <header class="header"> -->
+		<nav class="navbar navbar-expand-sm navbar-light bg-light">
 			<div class="container">
 				<div class="navbar-header">
 					<a href=""><img class="logo" src="logo.jpg"></a>
 				</div>
 				<div class="collapse navbar-collapse" id="menu-icon">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active"><a class="nav-link" href="">Home</a></li>
-					<li class="nav-item active"><a class="nav-link" href="">Become A Member</a></li>
-					<li class="nav-item active"><a class="nav-link" href="">Upcoming Events</a></li>
-					<li class="nav-item active"><a class="nav-link" href="">Leadership</a></li>
-					<li class="nav-item active"><a class="nav-link" href="">Donate</a></li>
-				</ul>
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active"><a class="nav-link" href="/Home.html">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../leadership/index.html">Leadership</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
+                    </ul>
 				</div>
 			</div>
 		</nav>
-	</header> -->
-<nav class="navbar navbar-light navbar-expand-sm bg-warning">
+	<!-- </header> -->
+<!-- <nav class="navbar navbar-light navbar-expand-sm bg-warning">
     <a href=""><img class="logo" src="footer-logo.jpg"></a>
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -48,7 +48,7 @@
             <a class="nav-link" href="../Leadership/index.html">Leadership</a>
         </li>
   </ul>
-</nav>
+</nav> -->
 <!---Picture Under header-->
 <div>
     <img class = 'pic-header' src='./leaders.jpg'>
