edited upcoming page

--- a/UpcomingActivities/activities.html
+++ b/UpcomingActivities/activities.html
@@ -10,9 +10,43 @@
 
 
 
-<body>  
+<body> 
+    <div>
+        <header class="header">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-icon" aria-controls="menu-icon" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <a href=""><img class="logo" src="logo.jpg"></a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="menu-icon">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active"><a class="nav-link" href="../Home/Home.html">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="/index.html">Leadership</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
+                    </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <div> 
+
+
+
+
+
+
+
+
+
+
+
     <!-- <header class="header"> -->
-		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+		<!-- <nav class="navbar navbar-expand-sm navbar-light bg-light">
 			<div class="container">
 				<div class="navbar-header">
 					<a href=""><img class="logo" src="logo.jpg"></a>
@@ -27,10 +61,10 @@
                     </ul>
 				</div>
 			</div>
-		</nav>
+		</nav> -->
 	<!-- </header> -->
-<!-- <nav class="navbar navbar-light navbar-expand-sm bg-warning">
-    <a href=""><img class="logo" src="footer-logo.jpg"></a>
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a href=""><img class="logo" src="logo.jpg"></a>
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" href="../Home/Home.html">Home Page</a>
