--- a/leadership/index.html
+++ b/leadership/index.html
@@ -17,14 +17,14 @@
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-icon" aria-controls="menu-icon" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
-					<a href=""><img class="logo" src="logo.jpg"></a>
+					<a href="../Home/Home.html"><img class="logo" src="logo.jpg"></a>
 				</div>
 				<div class="collapse navbar-collapse" id="menu-icon">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active"><a class="nav-link" href="../Home/Home.html">Home</a></li>
 					<li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
 					<li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
-					<li class="nav-item active"><a class="nav-link" href="/index.html">Leadership</a></li>
+					<li class="nav-item active"><a class="nav-link" href="../leadership/index.html">Leadership</a></li>
 					<li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
 				</ul>
 				</div>
