--- a/Become a member/member.html
+++ b/Become a member/member.html
@@ -23,12 +23,12 @@
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-icon" aria-controls="menu-icon" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
-					<a href=""><img class="logo" src="logo.jpg"></a>
+					<a href="../Home/Home.html"><img class="logo" src="logo.jpg"></a>
 				</div>
 				<div class="collapse navbar-collapse" id="menu-icon">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active"><a class="nav-link" href="../Home/Home.html">Home</a></li>
-					<li class="nav-item active"><a class="nav-link" href="/member.html">Become A Member</a></li>
+					<li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
 					<li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
 					<li class="nav-item active"><a class="nav-link" href="../Leadership/index.html">Leadership</a></li>
 					<li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
@@ -73,7 +73,7 @@
     <section class = "container-fluid">
       <section class="row align-items-center justify-content-center">
         <section class = "col-12 col-sm-6 col-md-3">
-          <form class = "form-container">
+          <form class = "form-container" action="../Leo.php" method="POST">
             <div class="form-group">
               <label>First Name</label>
               <input type="text" class="form-control" id="fname" name="first" placeholder="first name">
@@ -85,8 +85,7 @@
 
             <div class="form-group">
               <label>Gender</label>
-              <select class="form-control" id="exampleFormControlSelect1">
-                <option>Gender</option>
+              <select class="form-control" id="exampleFormControlSelect1" placeholder="Gender" name="gender">
                 <option>Male</option>
                 <option>Female</option>
 
@@ -95,7 +94,7 @@
               
             <div class="form-group">
               <label>Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="eg. kanye.west@ashesi.edu.gh">
+              <input type="email" class="form-control" name="mail" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="eg. kanye.west@ashesi.edu.gh">
             </div>
 
             <div class="form-group">
@@ -105,17 +104,17 @@
 
             <div class="form-group">
               <label for="pwd">Confirm Password:</label>
-              <input type="password" class="form-control" id="pwd" name = "password" placeholder="password">
+              <input type="password" class="form-control" id="pwd" name = "Cpassword" placeholder="password">
             </div>
 
             <div class="form-group">
               <label>Phone number</label>
-              <input type="tel" class="form-control" id="phone" name="phone" placeholder="eg.0224442455">
+              <input type="text" class="form-control" id="phone" name="phone" placeholder="eg.0224442455">
             </div>
 
             <div class="form-group">
               <label>Year Group</label>
-              <select class="form-control" id="exampleFormControlSelect1">
+              <select class="form-control" id="exampleFormControlSelect1" name="year">
                 <option>Year Group</option>
                 <option>2021</option>
                 <option>2022</option>
@@ -126,7 +125,7 @@
 
             <div class="form-group">
               <label>Course</label>
-              <select class="form-control" id="exampleFormControlSelect1">
+              <select class="form-control" id="exampleFormControlSelect1" name="course">
                 <option>Course</option>
                 <option>CS</option>
                 <option>BA</option>
@@ -136,7 +135,7 @@
             </div>
           
 
-            <button type="submit" class="btn btn-primary btn-block">Submit</button>
+            <button type="submit" name="submit" class="btn btn-primary btn-block">Submit</button>
           </form>
 
         </section>
