edited the header picture of some pages

--- a/Become a member/member.html
+++ b/Become a member/member.html
@@ -23,7 +23,7 @@
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-icon" aria-controls="menu-icon" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
-					<a href="../Home/Home.html"><img class="logo" src="logo.jpg"></a>
+					<a href="../Home/Home.html"><img class="logo" src="./PHOTO-2020-10-23-22-06-12.jpg"></a>
 				</div>
 				<div class="collapse navbar-collapse" id="menu-icon">
 				<ul class="navbar-nav mr-auto">
