--- a/UpcomingActivities/activities.html
+++ b/UpcomingActivities/activities.html
@@ -85,7 +85,7 @@
 </nav> -->
 <!---Picture Under header-->
 <div>
-    <img class = 'pic-header' src='./leaders.jpg'>
+    <img class = 'pic-header' src='./PHOTO-2020-10-23-22-05-33.jpg'>
 </div>
 
 <!--Container with the upcoming activites-->
