front end changes

--- a/Home/Home.html
+++ b/Home/Home.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel = "stylesheet" type = "text/css" href = "home.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -13,17 +16,17 @@
 </head>
 <body>
   
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <div class="navbar-header">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-icon" aria-controls="menu-icon" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a href="../Home/Home.html"><img class="logo" src="logo.jpg"></a>
+                <a href=""><img class="logo" src="logo.jpg"></a>
             </div>
             <div class="collapse navbar-collapse" id="menu-icon">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active"><a class="nav-link" href="../Home/Home.html">Home</a></li>
+                <li class="nav-item active"><a class="nav-link" href="/Home.html">Home</a></li>
                 <li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
                 <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
                 <li class="nav-item active"><a class="nav-link" href="../leadership/index.html">Leadership</a></li>
@@ -31,9 +34,9 @@
             </ul>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
-    <div id="carouselExampleIndicators" class="carousel slide space" data-ride="carousel">
+    <!-- <div id="carouselExampleIndicators" class="carousel slide space" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -58,7 +61,29 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
-    </div>
+    </div> -->
+
+    <header class="header">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container">
+				<div class="navbar-header">
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-icon" aria-controls="menu-icon" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<a href=""><img class="logo" src="logo.jpg"></a>
+				</div>
+				<div class="collapse navbar-collapse" id="menu-icon">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active"><a class="nav-link" href="../Home/Home.html">Home</a></li>
+					<li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
+					<li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
+					<li class="nav-item active"><a class="nav-link" href="/index.html">Leadership</a></li>
+					<li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
+				</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
     
 
       <div>
