--- a/UpcomingActivities/activities.html
+++ b/UpcomingActivities/activities.html
@@ -123,7 +123,7 @@
   
 
     <div class="form-popup" id="myForm">
-        <form action="/action_page.php" class="form-container">
+        <form action="login.php" class="form-container" method="POST">
           <h1><center>Register </center></h1>
       
           <label for="email"><b>Email</b></label>
