--- a/sprint-1/donate.html
+++ b/sprint-1/donate.html
@@ -21,7 +21,7 @@
 				<div class="collapse navbar-collapse" id="menu-icon">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active"><a class="nav-link" href="../Home/Home.html">Home</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="/member.html">Become A Member</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../Leadership/index.html">Leadership</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
