--- a/Home/Home.html
+++ b/Home/Home.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel = "stylesheet" type = "text/css" href = "home.css">
+    <link rel = "icon" href = "logo.jpg" type = "image/x-icon">
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
 
