--- a/leadership/index.html
+++ b/leadership/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ashesi Leo Club</title>
+	<title>Executives</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel = "icon" href = "logo.jpg" type = "image/x-icon">
 	
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
