--- a/index.html.html
+++ b/index.html.html
@@ -71,7 +71,7 @@
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-icon" aria-controls="menu-icon" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
 					</button>
-					<a href=""><img class="logo" src="/Home/logo.jpg"></a>
+					<a href=""><img class="logo" src="logo.jpg"></a>
 				</div>
 				<div class="collapse navbar-collapse" id="menu-icon">
 				<ul class="navbar-nav mr-auto">
