--- a/Become a member/member.html
+++ b/Become a member/member.html
@@ -117,6 +117,9 @@
                       <option value="BA">BA</option>
                       <option value="CE">CE</option>
                       <option value="ME">ME</option>
+                      <option value="EE">EE</option>
+                      <option value="MIS">MIS</option>
+
                     </select>
                   </div>
                 
