--- a/UpcomingActivities/activities.html
+++ b/UpcomingActivities/activities.html
@@ -15,7 +15,7 @@
 <body> 
     <div>
         <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="fixed-top navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container">
                     <div class="navbar-header">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-icon" aria-controls="menu-icon" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active"><a class="nav-link" href="../index.html">Home</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
+                        <li class="nav-item active" ><a class="nav-link" href="../UpcomingActivities/activities.html" style="color: gold;">Upcoming Events</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../leadership/leadership.html">Leadership</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
                     </ul>
@@ -171,10 +171,10 @@
         </div>
         <div class="footer-section link">
             <h1>Useful Links</h1>
-            <p><a href=""class = 'foot-text' >Become A Member</a></p>
-            <p><a href="" class = 'foot-text'>Activities</a></p>
-            <p><a href="" class = 'foot-text'>Donate</a></p>
-            <p><a href="" class = 'foot-text'>Leadership</a></p>
+            <p><a href="../Become a member/member.html"class = 'foot-text' >Become A Member</a></p>
+            <p><a href="../UpcomingActivities/activities.html" class = 'foot-text'>Activities</a></p>
+            <p><a href="../leadership/leadership.html" class = 'foot-text'>Donate</a></p>
+            <p><a href="../sprint-1/donate.html" class = 'foot-text'>Leadership</a></p>
         </div>
         <div class="footer-section link">
             <h1>Contact Us</h1>
