--- a/index.html.html
+++ b/index.html.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="collapse navbar-collapse" id="menu-icon">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
+					<li class="nav-item active"><a class="nav-link" href="./index.html.html">Home</a></li>
 					<li class="nav-item active"><a class="nav-link" href="./Become a member/member.html">Become A Member</a></li>
 					<li class="nav-item active"><a class="nav-link" href="./UpcomingActivities/activities.html">Upcoming Events</a></li>
 					<li class="nav-item active"><a class="nav-link" href="./leadership/leadership.html">Leadership</a></li>
