--- a/leadership/leadership.html
+++ b/leadership/leadership.html
@@ -12,7 +12,7 @@
 <body>
 	<div>
 	<header class="header">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="fixed-top navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container">
 				<div class="navbar-header">
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu-icon" aria-controls="menu-icon" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
 					<li class="nav-item active"><a class="nav-link" href="../index.html">Home</a></li>
 					<li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
 					<li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
-					<li class="nav-item active"><a class="nav-link" href="../leadership/leadership.html">Leadership</a></li>
+					<li class="nav-item active"><a class="nav-link" href="../leadership/leadership.html" style="color: gold;">Leadership</a></li>
 					<li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
 				</ul>
 				</div>
@@ -34,44 +34,61 @@
 	</header>
 	<div>
 		<h1 class="heading"><center>Ashesi Leo Club Leadership Team</center></h1>
-		<div class="container marketing">
+		<div class="container marketing" style="font-size: 17px;">
 			        <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <img class="rounded-circle" src="president.jpg" alt="Generic placeholder image" width="150" height="150">
+            <h2>Allice Mensah</h2>
+            <p>Allnice Mensah currently serves as the President of the Ashesi Leo Club. </p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <img class="rounded-circle" src="lisa.jpeg" alt="Generic placeholder image" width="150" height="150">
+			<h2>Aileen Akpalu</h2>
+			<p>Aileen Akpalu currently serves as the Vice-president of the Ashesi Leo Club. </p>
+
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <img class="rounded-circle" src="akosua.jpg" alt="Generic placeholder image" width="150" height="150">
+            <h2>Akosua Takyiwa-Debrah</h2>
+            <p>Akosua Takyiwa-Debrah currently serves as the Secretary of the Ashesi Leo Club</p>
+				
           </div><!-- /.col-lg-4 -->
 
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="lisa.jpeg" alt="vice president" width="150" height="150">
-            <h2>Aileen Akpalu</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <img class="rounded-circle" src="vera.jpg" alt="vice president" width="150" height="150">
+            <h2>Vera Bordah</h2>
+            <p>Vera Bordah currently serves as the Membership Director of the Ashesi Leo Club</p>
+				  
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle" src="george.jpeg" alt="Generic placeholder image" width="150" height="150">
             <h2>George Duku</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <p>George Duku currently serves as the Treasurer of the Ashesi Leo Club</p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="rounded-circle" src="hussein.jpg" alt="Generic placeholder image" width="150" height="150">
             <h2>Fuseini Hussein</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>Fuseini Hussein currently serves as the Project Director of the Ashesi Leo Club</p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
 	</div>
+	<div class="row">
+		<div class="col-lg-4">
+		  <img class="rounded-circle" src="chinwe.jpg" alt="vice president" width="150" height="150">
+		  <h2>Chinwe Ibegbu</h2>
+		  <p>Chinwe Ibegbu currently serves as the Marketing and Communications Director of the Ashesi Leo Club</p>
+		</div><!-- /.col-lg-4 -->
+		<div class="col-lg-4">
+		  <img class="rounded-circle" src="newidaya.jpg" alt="Generic placeholder image" width="150" height="150">
+		  <h2>Idaya Seidu</h2>
+		  <p>Idaya Seidu currently serves as the Tamer of the Ashesi Leo Club</p>
+		</div><!-- /.col-lg-4 -->
+
+
+  </div>
 	</div>
 	<!-- footer -->
 	<div class="footer">
@@ -83,10 +100,10 @@
 			</div>
 			<div class="footer-section link">
 				<h1>Useful Links</h1>
-				<p><a href="">Become A Member</a></p>
-				<p><a href="">Activities</a></p>
-				<p><a href="">Donate</a></p>
-				<p><a href="">Leadership</a></p>
+				<p><a href="../Become a member/member.html"class = 'foot-text' >Become A Member</a></p>
+				<p><a href="../UpcomingActivities/activities.html" class = 'foot-text'>Activities</a></p>
+				<p><a href="../leadership/leadership.html" class = 'foot-text'>Donate</a></p>
+				<p><a href="../sprint-1/donate.html" class = 'foot-text'>Leadership</a></p>
 			</div>
 			<div class="footer-section link">
 				<h1>Contact Us</h1>
