--- a/sprint-1/donate.html
+++ b/sprint-1/donate.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate</title>
     <link rel = "icon" href = "logo.jpg" type = "image/x-icon">
-    
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
+
     <link rel='stylesheet' href='donate.css'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
@@ -14,7 +19,7 @@
 
 <body>  
     <!-- <header class="header"> -->
-		<nav class="navbar navbar-expand-sm navbar-light bg-light">
+		<nav class="fixed-top navbar navbar-expand-sm navbar-light bg-light">
 			<div class="container">
 				<div class="navbar-header">
 					<a href=""><img class="logo" src="logo.jpg"></a>
@@ -25,46 +30,26 @@
                         <li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../Leadership/leadership.html">Leadership</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html" style="color: gold;">Donate</a></li>
                     </ul>
 				</div>
 			</div>
 		</nav>
-	<!-- </header> -->
-<!-- <nav class="navbar navbar-light navbar-expand-sm bg-warning">
-    <a href=""><img class="logo" src="footer-logo.jpg"></a>
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href="../Home/Home.html">Home Page</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../Become a member/member.html">Become a Member</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/activities.html">Upcoming Activities</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../sprint-1/donate.html">Donate</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="../Leadership/index.html">Leadership</a>
-        </li>
-  </ul>
-</nav> -->
+
 <!---Picture Under header-->
 <div>
-    <img class = 'pic-header' src='./PHOTO-2020-10-23-22-04-20.jpg'>
+    <img class = 'pic-header' src='./pichead.jpg'>
 </div>
 
 <!--Container with the upcoming activites-->
 <h2>Make a Donation</h2>
-<div class="work">   
+<div class="work" style="font-size: 19px;">   
   
   <p>Every donation no matter how big or small, makes a significant difference to our course.</p>
-  <p> Thank you for doing your part to help.</p>
+  <p style="margin-bottom: 50px;"> Thank you for doing your part to help.</p>
 
 
-  <div>
+  <div style="margin: 20px;">
   <details>
       <summary>Donate via wire transfer</summary>
       <p> To make a donation via wire transfer please contact  the Treasurer of leo club in Ashesi University Foundation at +1 (206) 545-6988 or <a href="mailto:burtina.graham@ashesi.edu.gh">Burtina Graham</a></p>
@@ -73,7 +58,7 @@
 
 
 
-  <div>
+  <div style="margin: 20px;">
       <details>
           <summary>Donate via mobile money</summary>
           <p> To danate via mobile money, please use this number +1 (206) 545-6988 </p>
@@ -83,7 +68,7 @@
 
 
 
-  <div>
+  <div style="margin: 20px;">
       <details>
           <summary>Mail a check</summary> 
   <p>Mail your gift to the Foundation, where many charitable contributions to Ashesi are processed. Please make all checks payable to Ashesi University Foundation. You can use this mailing address:<br>
@@ -107,10 +92,10 @@
         </div>
         <div class="footer-section link">
             <h1>Useful Links</h1>
-            <p><a href=""class = 'foot-text' >Become A Member</a></p>
-            <p><a href="" class = 'foot-text'>Activities</a></p>
-            <p><a href="" class = 'foot-text'>Donate</a></p>
-            <p><a href="" class = 'foot-text'>Leadership</a></p>
+            <p><a href="../Become a member/member.html"class = 'foot-text' >Become A Member</a></p>
+            <p><a href="../UpcomingActivities/activities.html" class = 'foot-text'>Activities</a></p>
+            <p><a href="../leadership/leadership.html" class = 'foot-text'>Donate</a></p>
+            <p><a href="../sprint-1/donate.html" class = 'foot-text'>Leadership</a></p>
         </div>
         <div class="footer-section link">
             <h1>Contact Us</h1>
