--- a/UpcomingActivities/activities.html
+++ b/UpcomingActivities/activities.html
@@ -27,7 +27,7 @@
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active"><a class="nav-link" href="../index.html">Home</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html" style="color: gold;">Upcoming Events</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../leadership/leadership.html">Leadership</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
                     </ul>
