inserted into table

--- a/UpcomingActivities/activities.html
+++ b/UpcomingActivities/activities.html
@@ -150,6 +150,18 @@
           <label for="psw"><b>Password</b></label>
           <input type="password" placeholder="Enter Password" name="psw" required>
 
+          <div class='form-group'>
+          <label for="Activty"><b>Name of Activity</b></label>
+          <select name="Activity" id="this_activity">
+              <option value="Labadi Beach Clean Up" id="Labadi">Labadi Beach Clean Up</option>
+              <option value="Berekuso Teen Mom's Project" id="Berekuso">Berekuso Teen Mom's Project</option>
+              <option value="Beach Clean Up Exercise" id="Beach">Beach Clean Up Exercise</option>
+              <option value="Diabetes Awareness Week" id="Diabetes">Diabetes Awareness Week</option>
+              <option value="Virtual Reading Clinic" id="Virtual">Virtual Reading Clinic</option>
+              <option value="Hunger Relief 2.0" id="Hunger">Hunger Relief 2.0</option>
+          </select>
+        </div>
+
           
       
           <button type="submit" class="btn" style="background-color:green;  padding: 10px;">Register</button>
