--- a/UpcomingActivities/activities.html
+++ b/UpcomingActivities/activities.html
@@ -143,7 +143,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
           <h2 style="align-items: left;">Register</h2>
-      
+
           <label for="email"><b>Email</b></label>
           <input type="text" placeholder="Enter Email" name="email" required>
       
@@ -152,7 +152,8 @@
 
           <div class='form-group'>
           <label for="Activty"><b>Name of Activity</b></label>
-          <select name="Activity" id="this_activity">
+          <select class="form-control" name="Activity" id="this_activity">
+              <option value="">Name of Activity</option>
               <option value="Labadi Beach Clean Up" id="Labadi">Labadi Beach Clean Up</option>
               <option value="Berekuso Teen Mom's Project" id="Berekuso">Berekuso Teen Mom's Project</option>
               <option value="Beach Clean Up Exercise" id="Beach">Beach Clean Up Exercise</option>
