--- a/UpcomingActivities/activities.html
+++ b/UpcomingActivities/activities.html
@@ -166,7 +166,8 @@
           
       
           <button type="submit" class="btn" style="background-color:green;  padding: 10px;">Register</button>
-          <button type="submit" name="submit" class="btn clear" style="background-color:blue; padding: 10px;">Become a member</button>
+          <p class="text-center">Not yet a member? <a href="../Become a member/member.html" name="commit">Sign Up</a></p>
+          <div style="font-size: 0.8em; text-align: center;"><a href="forgot_password.php">Forgot your Password?</a></div>
         </form>
       </div>
 
