--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 				</div>
 				<div class="collapse navbar-collapse" id="menu-icon">
 				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active"><a class="nav-link" href="../index.html" style="color: gold;">Home</a></li>
-					<li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
-					<li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
-					<li class="nav-item active"><a class="nav-link" href="../leadership/leadership.html" >Leadership</a></li>
-					<li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html">Donate</a></li>
+					<li class="nav-item active"><a class="nav-link" href="./index.html" style="color: gold;">Home</a></li>
+					<li class="nav-item active"><a class="nav-link" href="./Become a member/member.html">Become A Member</a></li>
+					<li class="nav-item active"><a class="nav-link" href="./UpcomingActivities/activities.html">Upcoming Events</a></li>
+					<li class="nav-item active"><a class="nav-link" href="./leadership/leadership.html" >Leadership</a></li>
+					<li class="nav-item active"><a class="nav-link" href="./sprint-1/donate.html">Donate</a></li>
 				</ul>
 				</div>
 			</div>
