--- a/leadership/leadership.html
+++ b/leadership/leadership.html
@@ -68,7 +68,7 @@
             <p>George Duku currently serves as the Treasurer of the Ashesi Leo Club</p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="hussein.jpg" alt="Generic placeholder image" width="150" height="150">
+            <img class="rounded-circle" src="hussein.JPG" alt="Generic placeholder image" width="150" height="150">
             <h2>Fuseini Hussein</h2>
             <p>Fuseini Hussein currently serves as the Project Director of the Ashesi Leo Club</p>
           </div><!-- /.col-lg-4 -->
