--- a/sprint-1/donate.html
+++ b/sprint-1/donate.html
@@ -29,7 +29,7 @@
                         <li class="nav-item active"><a class="nav-link" href="../index.html">Home</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../Become a member/member.html">Become A Member</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../UpcomingActivities/activities.html">Upcoming Events</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="../Leadership/leadership.html">Leadership</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../leadership/leadership.html">Leadership</a></li>
                         <li class="nav-item active"><a class="nav-link" href="../sprint-1/donate.html" style="color: gold;">Donate</a></li>
                     </ul>
 				</div>
